Added peer node
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_nodecert.yaml
+++ b/config/samples/operator_v1alpha1_nodecert.yaml
@@ -1,7 +1,7 @@
 apiVersion: operator.fabric.hyperledger.org/v1alpha1
 kind: Nodecert
 metadata:
-  name: ca1
+  name: ca-sample
 spec:
   # Add fields here
   organization: example.com
