--- a/config/samples/operator_v1alpha1_peer.yaml
+++ b/config/samples/operator_v1alpha1_peer.yaml
@@ -4,4 +4,11 @@ metadata:
   name: peer-sample
 spec:
   # Add fields here
-  foo: bar
+  organization: example.com
+  nodeCert:
+  release: 2.3.2
+  storage: 1Gi
+  logLevel: DEBUG
+
+
+
