--- a/watches.yaml
+++ b/watches.yaml
@@ -6,21 +6,21 @@
   role: orderer
   finalizer:
     name: operator.fabric.hyperledger.org/finalizer
-    playbook: playbooks/destroy.yml
+    playbook: playbooks/destroy-port.yml
 - version: v1alpha1
   group: operator.fabric.hyperledger.org
   kind: CA
   role: ca
   finalizer:
     name: operator.fabric.hyperledger.org/finalizer
-    playbook: playbooks/destroy.yml
+    playbook: playbooks/destroy-port-pvc.yml
 - version: v1alpha1
   group: operator.fabric.hyperledger.org
   kind: Peer
   role: peer
   finalizer:
     name: operator.fabric.hyperledger.org/finalizer
-    playbook: playbooks/destroy.yml
+    playbook: playbooks/destroy-port.yml
 - version: v1alpha1
   group: operator.fabric.hyperledger.org
   kind: Nodecert
