Fixed the followings
1. made playbook names consistently using .yml instead of .yaml
2. uses ip address for endpoint when ingress controller does not
   provide domain name
3. fixed missing env for external builder and launcher script

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -29,6 +29,7 @@ spec:
         - --leader-elect
         - --leader-election-id=fabric-operator
         image: controller:latest
+        imagePullPolicy: Always
         name: manager
         env:
         - name: ANSIBLE_GATHERING
@@ -42,7 +43,7 @@ spec:
         - name: ANSIBLE_VERBOSITY_NODECERT_OPERATOR_FABRIC_HYPERLEDGER_ORG
           value: "0"
         - name: ANSIBLE_VERBOSITY_AGENT_OPERATOR_FABRIC_HYPERLEDGER_ORG
-          value: "6"
+          value: "0"
         securityContext:
           allowPrivilegeEscalation: false
         livenessProbe:
