--- a/playbooks/get-istio-info.yml
+++ b/playbooks/get-istio-info.yml
@@ -40,7 +40,14 @@
       istio_deplyment_name: "{{ istio_info.results[0].resources[0].metadata.name | default('') }}"
       istio_service_name: "{{ istio_info.results[1].resources[0].metadata.name | default('') }}"
       istio_hostname: "{{ istio_info.results[1].resources[0].status.loadBalancer.ingress[0].hostname | default('') }}"
+      istio_ip: "{{ istio_info.results[1].resources[0].status.loadBalancer.ingress[0].ip | default('') }}"
       istio_ports: "{{ istio_info.results[1].resources[0].spec.ports | default([]) }}"
+
+  - debug:
+      var: istio_hostname
+
+  - debug:
+      var: istio_ip
 
   - name: Get all the used ports
     set_fact:
