--- a/roles/ca/tasks/main.yml
+++ b/roles/ca/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Validate configurations
-  include_tasks: "validation.yaml"
+  include_tasks: "validation.yml"
 
 # Try to get istio info
 - name: Get istio info
-  include_tasks: "{{ role_path }}/../../playbooks/get-istio-info.yaml"
+  include_tasks: "{{ role_path }}/../../playbooks/get-istio-hostname.yml"
 
 - name: Search for the ca node
   community.kubernetes.k8s_info:
@@ -151,28 +151,18 @@
               command: ["fabric-ca-server"]
               args:  ["start", "-b", "$(CA_USERNAME):$(CA_PASSWORD)"]
 
-# - name: Wait till the CA is running
-#   community.kubernetes.k8s_info:
-#     kind: CA
-#     api_version: operator.fabric.hyperledger.org/v1alpha1
-#     wait: yes
-#     name: "{{ ansible_operator_meta.name }}"
-#     namespace: "{{ ansible_operator_meta.namespace }}"
-#     wait_condition:
-#       type: Running
-#       reason: Successful
-#     wait_sleep: 5
-#     wait_timeout: 360
-#   register: web_service
-
-# Here we figure out how to expose the node endpoint
+# When we reach this point, we know that CA node is most likely up
+# running, now expose the node endpoint
 
 # The following tasks are all for exposing the node endpoint to
 # outside of the k8s cluster using istio
 # When include another playbook, only role_path can be used
-# both playbook_dir and inventory_dir will be mapped to tmp directory 
+# both playbook_dir and inventory_dir will be mapped to tmp directory
+- name: Get istio information and available port
+  include_tasks: "{{ role_path }}/../../playbooks/get-istio-info.yml"
+
 - name: Add gateway and virtual service
-  include_tasks: "{{ role_path }}/../../playbooks/add-gw-vs.yaml"
+  include_tasks: "{{ role_path }}/../../playbooks/add-gw-vs.yml"
 
 - name: Check the existance of the gateway
   community.kubernetes.k8s_info:
@@ -181,6 +171,12 @@
     name: '{{ ansible_operator_meta.name }}-gateway'
     namespace: '{{ ansible_operator_meta.namespace }}'
   register: thegateway
+
+- debug:
+    var: thegateway
+
+- debug:
+    var: istio_ip
 
 # Update the crd to have endpoints and other possible information
 - name: update the crd status
@@ -191,4 +187,5 @@
     name: "{{ ansible_operator_meta.name }}"
     namespace: "{{ ansible_operator_meta.namespace }}"
     status:
-      endpoint: '{{ istio_hostname }}:{{ thegateway.resources[0].spec.servers[0].port.number }}'
+      endpoint: >-
+        {{ (istio_hostname=='')|ternary(istio_ip, istio_hostname) }}:{{ thegateway.resources[0].spec.servers[0].port.number }}
