--- a/roles/orderer/tasks/main.yml
+++ b/roles/orderer/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Validate configurations
-  include_tasks: "validation.yaml"
+  include_tasks: "validation.yml"
 
 # Try to get istio info
 - name: Get istio info
-  include_tasks: "{{ role_path }}/../../playbooks/get-istio-info.yaml"
+  include_tasks: "{{ role_path }}/../../playbooks/get-istio-hostname.yml"
 
 - name: Search for the Orderer node
   community.kubernetes.k8s_info:
@@ -190,8 +190,19 @@
               - { mountPath: "/var/hyperledger/production", name: "{{ cnodename }}-data" }
               command: ['orderer']
 
+
+# When we reach this point, we know that Orderer node is most likely up
+# running, now expose the node endpoint
+
+# The following tasks are all for exposing the node endpoint to
+# outside of the k8s cluster using istio
+# When include another playbook, only role_path can be used
+# both playbook_dir and inventory_dir will be mapped to tmp directory
+- name: Get istio information and available port
+  include_tasks: "{{ role_path }}/../../playbooks/get-istio-info.yml"
+
 - name: Add gateway and virtual service
-  include_tasks: "{{ role_path }}/../../playbooks/add-gw-vs.yaml"
+  include_tasks: "{{ role_path }}/../../playbooks/add-gw-vs.yml"
 
 - name: Check the existance of the gateway
   community.kubernetes.k8s_info:
@@ -210,4 +221,5 @@
     name: "{{ ansible_operator_meta.name }}"
     namespace: "{{ ansible_operator_meta.namespace }}"
     status:
-      endpoint: '{{ istio_hostname }}:{{ thegateway.resources[0].spec.servers[0].port.number }}'
+      endpoint: >-
+        {{ (istio_hostname=='')|ternary(istio_ip, istio_hostname) }}:{{ thegateway.resources[0].spec.servers[0].port.number }}
