Set up the agent framework
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent.yaml
+++ b/config/samples/operator_v1alpha1_agent.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   organization: example.com
   type: Admin
-  action:
-    name: ChannelCreate
+  nodeCert:
+  actions:
+  - name: channelcreate
     description: Create new channel
     params:
     - name: channelName
