Added channel create action
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent.yaml
+++ b/config/samples/operator_v1alpha1_agent.yaml
@@ -12,5 +12,5 @@ spec:
     params:
     - name: channelName
       value: tongli
-    - name: channelSize
-      value: 5
+    - name: initialOrdererNode
+      value: orderer-sample
