--- a/roles/agent/tasks/validation.yml
+++ b/roles/agent/tasks/validation.yml
@@ -32,3 +32,4 @@
   set_fact:
     bindir: "{{ lookup('env','HOME') }}/agent/{{ release }}"
     workdir: "{{ lookup('env','HOME') }}/agent/{{ 99999999 | random | to_uuid }}"
+    orgid: "{{ organization | replace('.', '-') }}"
