changed the default channel name to be mychannel
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent.yaml
+++ b/config/samples/operator_v1alpha1_agent.yaml
@@ -11,6 +11,6 @@ spec:
     description: Create new channel
     params:
     - name: channelName
-      value: tongli
+      value: mychannel
     - name: initialOrdererNode
       value: orderer-sample
